--- a/package.json
+++ b/package.json
@@ -29,8 +29,14 @@
     "@babel/core": "^7.15.0",
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-react": "^7.14.5",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
     "babel-loader": "^8.2.2",
-    "eslint": "^7.32.0",
+    "eslint": "^8.2.0",
+    "eslint-plugin-react": "^7.27.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.0.2",
+    "stylus": "^0.55.0",
     "webpack": "^5.51.1"
   }
 }
