--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "lint-staged": "^12.0.2",
     "prettier": "^2.4.1",
     "stylus": "^0.55.0",
-    "webpack": "^5.51.1"
+    "webpack": "^5.64.3",
+    "webpack-cli": "^4.9.1"
   }
 }
